# memopad

./: .gitignore  .mocharc.cjs  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tsconfig.e2e.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  e2e.yml  release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: files.rs  fs.rs  journal.rs  lib.rs  search.rs  session.rs  stat.rs  watcher.rs
src/commands/: builtins.ts  registry.ts
src/components/: CommandPalette.tsx  DiffModal.tsx  Editor.tsx  EditorPane.tsx  EncodingPopover.tsx  EolPopover.tsx  ExternalChangeBanner.tsx  FileTreePanel.tsx  QuickOpenPalette.tsx  ReplaceConfirmDialog.tsx  SearchPanel.tsx  SearchStrip.tsx  Sidebar.tsx  SidebarTabs.tsx  StatusBar.tsx  TabContextMenu.tsx  TabStrip.tsx  TitleBar.tsx  TreeNode.tsx  UpdateBanner.tsx
src/editor/: memopad-dark.ts  memopad-light.ts
src/lib/: boot.ts  dialog.ts  diff.ts  fs-watcher.ts  journal-debounce.ts  language.ts  path.ts  quick-open.ts  replace-preview.ts  session-debounce.ts  tauri.ts  updater.ts
src/stores/: buffer.ts  buffers.ts  theme.ts  workspace.ts
src/styles/: themes.css
src/tests/: boot.test.ts  buffer.test.ts  buffers.test.ts  commands.test.ts  diff.test.ts  fs-watcher.test.ts  journal-debounce.test.ts  path.test.ts  quick-open.test.ts  replace-preview.test.ts  sanity.test.ts  session-debounce.test.ts  tauri.test.ts  theme.test.ts  workspace-recent.test.ts  workspace-replace.test.ts  workspace-tree.test.ts  (+2 more)
(+88 files in other folders)
